[gd_scene load_steps=4 format=1]

[ext_resource path="res://NameGenerator.gd" type="Script" id=1]
[ext_resource path="res://UI_font.fnt" type="BitmapFont" id=2]
[ext_resource path="res://black.png" type="Texture" id=3]

[node name="NameGenerator" type="Node2D"]

script/script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 5.0
margin/top = 5.0
margin/right = 340.0
margin/bottom = 405.0
alignment = 0

[node name="Title" type="Label" parent="VBoxContainer"]

rect/min_size = Vector2( 203, 23 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 335.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Fantasy Name Generator"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ButtonList" type="HBoxContainer" parent="VBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 27.0
margin/right = 335.0
margin/bottom = 57.0
alignment = 0

[node name="Markov" type="Button" parent="VBoxContainer/ButtonList"]

rect/min_size = Vector2( 0, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 5.0
margin/right = 113.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Generate Name"
flat = false

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/ButtonList"]

rect/min_size = Vector2( 10, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 117.0
margin/top = 0.0
margin/right = 127.0
margin/bottom = 30.0

[node name="Dwarf" type="Button" parent="VBoxContainer/ButtonList"]

rect/min_size = Vector2( 0, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 131.0
margin/top = 5.0
margin/right = 229.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Dwarven Clan"
flat = false

[node name="VSeparator1" type="VSeparator" parent="VBoxContainer/ButtonList"]

rect/min_size = Vector2( 10, 30 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 233.0
margin/top = 0.0
margin/right = 243.0
margin/bottom = 30.0

[node name="Elf" type="Button" parent="VBoxContainer/ButtonList"]

rect/min_size = Vector2( 0, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 247.0
margin/top = 5.0
margin/right = 335.0
margin/bottom = 25.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Elven Name"
flat = false

[node name="chooseNumber" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 61.0
margin/right = 335.0
margin/bottom = 85.0
alignment = 0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/chooseNumber"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 74.0
margin/bottom = 24.0
range/min = 4.0
range/max = 20.0
range/step = 1.0
range/page = 0.0
range/value = 7.0
range/exp_edit = false
range/rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label" type="Label" parent="VBoxContainer/chooseNumber"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 78.0
margin/top = 5.0
margin/right = 282.0
margin/bottom = 19.0
text = "Maximum number of characters"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ResultsBox" type="RichTextLabel" parent="VBoxContainer"]

editor/display_folded = true
rect/min_size = Vector2( 335, 400 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 89.0
margin/right = 335.0
margin/bottom = 489.0
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1
percent_visible = 1.0

[node name="Sprite" type="Sprite" parent="VBoxContainer/ResultsBox"]

visibility/behind_parent = true
transform/pos = Vector2( -2, 0 )
transform/scale = Vector2( 335, 400 )
texture = ExtResource( 3 )
centered = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 493.0
margin/right = 335.0
margin/bottom = 513.0
alignment = 1

[node name="Export" type="Button" parent="VBoxContainer/HBoxContainer"]

rect/min_size = Vector2( 100, 20 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 95.0
margin/top = 0.0
margin/right = 195.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Export"
flat = false
align = 0

[node name="Quit" type="Button" parent="VBoxContainer/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 2
margin/left = 285.0
margin/top = 0.0
margin/right = 325.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = true
align = 2

[connection signal="pressed" from="VBoxContainer/ButtonList/Markov" to="." method="_on_Markov_pressed"]

[connection signal="pressed" from="VBoxContainer/ButtonList/Dwarf" to="." method="_on_Dwarf_pressed"]

[connection signal="pressed" from="VBoxContainer/ButtonList/Elf" to="." method="_on_Elf_pressed"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Export" to="." method="_on_Export_pressed"]

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Quit" to="." method="_on_Quit_pressed"]


